--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #alert {
     position: fixed;
-    top: 50px;
+    top: -50px;
     left: 50%;
     -webkit-transform: translateX(-50%);
     -moz-transform: translateX(-50%);
@@ -9,6 +9,13 @@
     transform: translateX(-50%);
     z-index: 9999;
     margin: 0;
+    opacity: 0;
+    transition: all 0.5s ease-in-out 0s;
+}
+
+#alert.active {
+    top: 50px;
+    opacity: 1;
 }
 
 #sidebar {
