--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --transition: all 0.2s ease-in-out 0s;
+}
+
 #alert {
     position: fixed;
     top: -50px;
@@ -68,4 +72,42 @@
 
 .nav-link:hover > .nav-text.text-white {
     opacity: 0.5;
+}
+
+.component {
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.component::after {
+    --offset: 10px;
+    content: '';
+    position: absolute;
+    top: calc(var(--offset) * -1);
+    left: calc(var(--offset) * -1);
+    width: calc(100% + var(--offset) * 2);
+    height: calc(100% + var(--offset) * 2);
+    z-index: -1;
+    border: 2px dashed #aaaaaa;
+    opacity: 0;
+    transition: var(--transition);
+}
+
+.component .btn-group {
+    opacity: 0.2;
+    filter: grayscale(1);
+    -webkit-transition: var(--transition);
+    -moz-transition: var(--transition);
+    -ms-transition: var(--transition);
+    -o-transition: var(--transition);
+    transition: var(--transition);
+}
+
+.component:hover .btn-group {
+    opacity: 1;
+    filter: unset;
+}
+
+.component:hover::after {
+    opacity: 1;
 }
